# safety_ai_app

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  DEPLOY.md  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  firebase.json  git_push.bat  packages.txt  pyproject.toml  replit.md  requirements.txt  run.bat  run_nr_scraper.bat  run_rag_qa.bat  run_vectorizer.bat  run_web.bat  test_import.py  user_settings.json
.devcontainer/: devcontainer.json
.firebase/: hosting.cHVibGlj.cache
.streamlit/: config.toml
DOCs/: 2026-04-20-Correcao-Build-Deploy.md  2026-04-20-Correcao-OAuth-Performance.md  2026-04-20-Otimizacao-Inicializacao-Rapida.md  ARQUITETURA.md  RAG_IA.md  (+12 more)
safety_ai_app/: .gitignore  .python-version  README.md  git_push.bat  pyproject.toml  requirements.txt  user_settings.json
safety_ai_app/data/: .download_metadata.json  REINDEX_RECORD.md  ai_config.json  brazilian_cities.json  donations_log.json  feature_flags.json  nr_indexing_status.json
safety_ai_app/data/eval/: golden_set.json
safety_ai_app/data/games/: accident_scenarios.json  crossword_data.json  crossword_words_local.json  hangman_words.json  memory_pairs.json  quiz_questions.json  word_search_words.json
safety_ai_app/data/nrs/: GUIA-LTCAT-AET.txt  GUIA-PGR-elaboracao.txt  NR-01-referencia.txt  NR-02-referencia.txt  NR-03-referencia.txt  NR-04-referencia.txt  NR-05-referencia.txt  NR-06-referencia.txt  NR-07-referencia.txt  NR-08-referencia.txt  NR-09-referencia.txt  NR-10-referencia.txt  NR-11-referencia.txt  NR-12-referencia.txt  NR-13-referencia.txt  NR-14-referencia.txt  NR-15-referencia.txt  NR-16-referencia.txt  NR-17-referencia.txt  NR-18-referencia.txt  NR-19-referencia.txt  NR-20-referencia.txt  NR-21-referencia.txt  NR-22-referencia.txt  NR-23-referencia.txt  NR-24-referencia.txt  NR-25-referencia.txt  NR-26-referencia.txt  NR-27-referencia.txt  NR-28-referencia.txt  NR-29-parte1.txt  NR-29-parte2.txt  NR-29-parte3.txt  NR-29-parte4.txt  NR-29-referencia.txt  NR-30-referencia.txt  NR-31-referencia.txt  NR-32-referencia.txt  NR-33-referencia.txt  NR-34-referencia.txt  (+5 more)
safety_ai_app/data/plans/: plans.json
safety_ai_app/docs/: 2026-04-29-Refatoracao-God-Files.md  ADMIN_PANEL.md  API_BACKEND_ARCHITECTURE.md  DECOUPLED_ARCHITECTURE_MIGRATION.md  GCS_PERSISTENCE.md  MODULAR_RAG_ARCHITECTURE.md  README.md  SAFETY_AI_PERFORMANCE.md  index.html  privacy.html  security_audit.md  terms.html
safety_ai_app/scripts/: evaluate_rag.py  generate_cities_data.py  index_local_nrs.py  nr_scraper.py  run_security_audit.sh  vectorize_nrs.py
safety_ai_app/src/safety_ai_app/: _nr_indexer_runner.py  api_client.py  auto_sync_scheduler.py  ca_data_processor.py  cbo_data_processor.py  cid_data_processor.py  cipa_data_processor.py  cnae_data_processor.py  cnae_risk_data_processor.py  drive_downloader.py  drive_sync.py  feature_access.py  fines_data_processor.py  google_drive_integrator.py  input_validators.py  job_api_integrator.py  logging_config.py  nr_rag_qa.py  nr_update_checker.py  quiz_data_processor.py  server.py  sesmt_data_processor.py  session_manager.py  storage_manager.py  text_extractors.py  theme_config.py  web_app.py
safety_ai_app/src/safety_ai_app/api/: deps.py  main.py
safety_ai_app/src/safety_ai_app/api/middleware/: auth.py
safety_ai_app/src/safety_ai_app/api/routers/: admin.py  chat.py  documents.py
safety_ai_app/src/safety_ai_app/api/schemas/: chat.py
safety_ai_app/src/safety_ai_app/auth/: __init__.py  google_auth.py  quota_manager.py
safety_ai_app/src/safety_ai_app/data_parsers/: __init__.py  games_parser.py
safety_ai_app/src/safety_ai_app/database/: firestore_service.py
safety_ai_app/src/safety_ai_app/document_generators/: apr_document_generator.py  ata_document_generator.py
safety_ai_app/src/safety_ai_app/document_generators/templates/: apr_template.docx  ata_template.docx
safety_ai_app/src/safety_ai_app/document_processors/: __init__.py  docx_processor.py  excel_processor.py  image_processor.py  lazy_loaders.py  media_processor.py  pdf_processor.py  pptx_processor.py  universal_loader.py
safety_ai_app/src/safety_ai_app/observability/: __init__.py  rag_logger.py
safety_ai_app/src/safety_ai_app/prompts/: system_prompt.md
safety_ai_app/src/safety_ai_app/rag/: __init__.py  embeddings.py  history_manager.py  indexer.py  llm_factory.py  nr_indexer.py  qa_chain.py  retriever.py  warmup.py
safety_ai_app/src/safety_ai_app/security/: __init__.py  rate_limiter.py  security_logger.py
safety_ai_app/src/safety_ai_app/static/: sw.js
safety_ai_app/src/safety_ai_app/storage/: storage_service.py
safety_ai_app/src/safety_ai_app/web_interface/: i18n.py  icons.py  login_page.py  pwa_support.py  router.py  session_state.py  shared_styles.py  sidebar.py  utils.py
safety_ai_app/src/safety_ai_app/web_interface/components/games/: accident_investigation_game.py  crossword_game.py  hangman_game.py  memory_game.py  quiz_game.py  word_search_game.py
safety_ai_app/src/safety_ai_app/web_interface/pages/: admin_knowledge_base.py  admin_panel_page.py  ai_evaluation_page.py  apr_generator_page.py  ata_generator_page.py  ca_consult_page.py  cbo_consult_page.py  chat_page.py  cid_consult_page.py  cipa_sizing_page.py  cnae_consult_page.py  emergency_brigade_sizing_page.py  fines_consult_page.py  games_page.py  home_page.py  jobs_board_page.py  knowledge_base_page.py  library_page.py  news_feed_page.py  quick_queries_page.py  sesmt_sizing_page.py  settings_page.py  sizing_page.py  sync_page.py
safety_ai_app/src/safety_ai_app/web_interface/pages/admin/: __init__.py  _helpers.py  _tab_advanced_config.py  _tab_ai_pipeline.py  _tab_logs.py  _tab_overview.py  _tab_plans.py
safety_ai_app/src/safety_ai_app/web_interface/pages/chat/: __init__.py  _logic.py  _renderer.py  _security.py  _styles.py
safety_ai_app/src/safety_ai_app/web_interface/static/: cyber_neon.css
(+30 files in other folders)
