[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "SafetyAI - Assistente de IA para Saúde e Segurança do Trabalho"
requires-python = ">=3.12, <3.13"
dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "chromadb>=0.4.0,<0.5.0",
    "docxtpl>=0.16.0,<0.20.0",
    "feedparser>=6.0.0,<7.0.0",
    "google-api-python-client>=2.100.0,<3.0.0",
    "google-auth>=2.23.0,<3.0.0",
    "google-auth-oauthlib>=1.1.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-chroma>=0.1.0,<0.2.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pandas>=2.1.0,<3.0.0",
    "pypdf>=3.17.0,<4.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "sentence-transformers>=2.2.0,<2.3.0",
    "streamlit>=1.31.0,<2.0.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
sentence-transformers = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
